Significant overhaul that fixes bugs, adds features, and removes features
Fixed rotation issues by applying conditional transform offset to preview
Fixed horizontal scrolling issues by changing row display to flex and removing float on tiles
Fixed visibility of blocked highlight by changing to red border
Added highlight color to origin to make it obvious where the center of the grid is
Added functionality to change grid size via controls in actions area
Added functionality to load in an existing blueprint string
Removed all functionality for saving JSON to myjson.com in favor of simplicity, security, and loading blueprint strings
Separated the original createGrid function into two parts for dynamic resizing of the grid
Added kovarex_enrichment_process to blueprint entity data as placeholder
Changed loadJSON to replace the viewmodel blueprint rather than re-creating the entities and losing data in the process
Changed loadEntity that supports loadJSON to simply emit the itemPlaced event for each rather than call tryPlaceSelectedItem
Updated to latest build of factorio-blueprint.min.js

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
     height: 800px;
     display: grid;
     grid-template-columns: 200px auto;
-    grid-template-rows: 100px 180px auto;
+    grid-template-rows: 120px 180px auto;
     grid-column-gap: 5px;
     grid-row-gap: 2px;
 }
@@ -16,7 +16,7 @@ html {
         height: 800px;
         display: grid;
         grid-template-columns: 100px auto;
-        grid-template-rows: 100px 180px auto;
+        grid-template-rows: 120px 180px auto;
         grid-column-gap: 5px;
         grid-row-gap: 2px;
     }
@@ -34,6 +34,18 @@ html {
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+.navbar__grid-size {
+    margin: 2px 0px;
+    display: flex;
+    flex-direction: row;
+}
+.navbar__grid-size input {
+    width: 30px;
+}
+.navbar__grid-size button {
+    flex-grow: 1;
 }
 
 @media only screen and (max-width: 425px) {
@@ -72,8 +84,8 @@ html {
     opacity: 0.75;
 }
 
-.mouse__preview.blocked {
-    background-color: rgba(255, 0, 0, 0.3)
+.mouse__preview.blocked .preview {
+    border: 2px solid red;
 }
 
 @media only screen and (max-width: 425px) {
@@ -248,18 +260,20 @@ html {
 }
 
 .row {
-    /*display: inline-block;*/
+    display: flex;
     clear: both;
     float: left;
-    width: 1100px;
 }
 
 .tile {
-    float: left;
     border: 1px solid black;
     height: 30px;
     width: 30px;
     user-select: none;
+}
+
+.tile.origin {
+    background-color: rgba(0,0,0,0.3);
 }
 
 .tile:hover {
